Fix appbt